# flare

./: Dockerfile  README.md  docker_compose.yaml  example.env  pyproject.toml
src/: command_handlers.py  config.py  main.py
src/models/: __init__.py  logfire_alert.py
src/utils/: logger.py
